--- a/Ansible/docker.yaml
+++ b/Ansible/docker.yaml
@@ -1,5 +1,5 @@
 - name: docker build and push
-  hosts: local  # Replace with the hostname or IP address of your target server
+  hosts: 54.162.9.200  # Replace with the hostname or IP address of your target server
   become: yes  # Run tasks with sudo privileges
 
   tasks:
@@ -13,16 +13,16 @@
         chdir: /var/lib/jenkins/workspace/petstore
 
     - name: tag image
-      command: docker tag petstore:latest sevenajay/petstore:latest 
+      command: docker tag petstore:latest albu2k/petstore:latest 
 
     - name: Log in to Docker Hub
       community.docker.docker_login:
         registry_url: https://index.docker.io/v1/
-        username: dockerhub username
-        password: dockerhub password/PAT
+        username: albu2k
+        password: Kabugo123!
 
     - name: Push image
-      command: docker push sevenajay/petstore:latest
+      command: docker push albu2k/petstore:latest
 
     - name: Run container
-      command: docker run -d --name pet1 -p 8081:8080 sevenajay/petstore:latest
+      command: docker run -d --name pet1 -p 8081:8080 albu2k/petstore:latest
