--- a/Ansible/docker.yaml
+++ b/Ansible/docker.yaml
@@ -1,5 +1,5 @@
 - name: docker build and push
-  hosts: 54.162.9.200  # Replace with the hostname or IP address of your target server
+  hosts: local  # Replace with the hostname or IP address of your target server
   become: yes  # Run tasks with sudo privileges
 
   tasks:
@@ -19,10 +19,10 @@
       community.docker.docker_login:
         registry_url: https://index.docker.io/v1/
         username: albu2k
-        password: Kabugo123!
+        password: dckr_pat_UnEzbk85lFB0cknEA6C8SOlbYUI
 
     - name: Push image
       command: docker push albu2k/petstore:latest
 
     - name: Run container
-      command: docker run -d --name pet1 -p 8081:8080 albu2k/petstore:latest
+      command: docker run -d --name petstore -p 8081:8080 albu2k/petstore:latest
